package NYtPython.NHiveClient.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";
import "yt_proto/yt/ytlib/node_tracker_client/node.proto";

////////////////////////////////////////////////////////////////////////////////

message TCellPeerDescriptor
{
    required NYtPython.NNodeTrackerClient.NProto.TNodeDescriptor node_descriptor = 1;
    required bool voting = 2;
}

message TCellDescriptor
{
    required NYtPython.NProto.TGuid cell_id = 1;
    required int32 config_version = 2;
    repeated TCellPeerDescriptor peers = 3;
}

message TCellInfo
{
    required NYtPython.NProto.TGuid cell_id = 1;
    required int32 config_version = 2;
}

////////////////////////////////////////////////////////////////////////////////
